deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ddash 
  namespace: "${NAMESPACE}"
  labels:
    app: ddash 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ddash 
  template:
    metadata:
      name: ddash 
      labels:
        app: ddash 
    spec:
      containers:
        - image: "${DDASH_IMAGE}"
          name: ddash 
          ports:
            - containerPort: 80
              protocol: TCP
